my css assignment

--- a/recipes/easy-meatloaf.html
+++ b/recipes/easy-meatloaf.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Easy meatloaf</h1>
-    <img src="https://images.media-allrecipes.com/userphotos/7185409.jpg">
+    <img src="https://images.media-allrecipes.com/userphotos/7185409.jpg" alt="A picture of easy meatloaf">
     <h2>Description</h2>
     <p>This is a very easy and no fail recipe for meatloaf. it won't take long to make at all, and it's quite good!</p>
     <h2>Ingredients</h2>
