--- a/recipes/teriyaki-shrimp.html
+++ b/recipes/teriyaki-shrimp.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Teriyaki Shrimp and Vegetable Stir-Fry</h1>
-    <img src="https://images.media-allrecipes.com/userphotos/7559048.jpg">
+    <img src="https://images.media-allrecipes.com/userphotos/7559048.jpg" alt="A picture of teriyaki shrimp"> 
     <h2>Description</h2>
     <p>Shrimp, bok choy, broccoli, and zucchini are happy together in a stir-fry that makes its own teriyaki sauce. Serve over rice or noodles for a tasty meal.</p>
     <h2>Ingredients</h2>
