--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>French Toast</h1>
-    <img src="https://images.media-allrecipes.com/userphotos/3307203.jpg">
+    <img src="https://images.media-allrecipes.com/userphotos/3307203.jpg" alt="A picture of french toast">
     <h2>Description</h2>
     <p>There are many, fancy variations on this basic recipe. This recipe works with many types of bread-white, whole wheat, cinnamon-raisin, Italian or French. Serve hot with butter or margarine and maple syrup.</p>
     <h2>Ingredients</h2>
