--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Guacamole</h1>
-    <img src="https://images.media-allrecipes.com/userphotos/6338793.jpg">
+    <img src="https://images.media-allrecipes.com/userphotos/6338793.jpg" alt="A picture of a gucamole dish">
     <h2>Description</h2>
     <p>You can make this avocado salad smooth or chunky depending on your tastes.</p>
     <h2>Ingredients</h2>
